--- a/src/index.css
+++ b/src/index.css
@@ -153,3 +153,15 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Chrome, Safari, Edge, Opera */
+.no-spinner::-webkit-outer-spin-button,
+.no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.no-spinner {
+  -moz-appearance: textfield;
+}
